--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -7,6 +7,6 @@ alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
 category: Web Development
-description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
+description: Iowa liquor sales! This report provides an analysis of transactional data and demographic data to predict total sales by liquor stores in Iowa. The goal was to use this info to make locational recommendations for building new liquor stores in Iowa. The data was sourced from the state of Iowa, and was grouped into store level data in order to infer about sales by store. Linear regression was the method of analysis for this study. While initially examining the sales oriented data, the main focus of this study is on the demographic data. Locational data is likely to have correlation but not causation with sales, and for that reason the report analyzes the demographic data, or quantifiable population statistics that can be categorized by location, to infer about the ability of a location to predict sales. The hypothesis was that demographic data will help explain the variability of store sales. The results of the study unfortunately tell a different tale - models using the demographic data had poor explanatory power on the sales of a store. As such, I concluded that demographic data at that level cannot reliably be used to predict store sales. Polk, Linn, and Scott counties were selected as target regions for new stores based on their relative outperformance in sales and undersaturation on a stores per county basis. Further assessment should address intercounty data to find the least saturated points in these counties.
 
 ---
