--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -1,12 +1,11 @@
 ---
 layout: default
 modal-id: 1
-date: 2014-07-18
-img: cabin.png
+date: 2018-03-10
+img: lightning.png
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
+project-date: March 2018
+category: Data Science
 description: While in college, I took a weather and climate. I've always carried an interest in the nature and the environment, and that course allowed me to appreciate these things from a new perspective. Since then I've been curious about the link between commodities and the weather. Now I finally have the opportunity to examine it depth! 
 
 The goal of this study is to examine the effect of weather on agricultural commodity prices. The initial target is to see how what percentage of price variability is explained by weather, and the secondary target is to predict commodities price movement (directional/classification or actual price). Corn, cotton, and wheat are three of the US' biggest crops. I will use US spot prices and US weather data. This analysis will assume that the US market is the driver of US commodity prices; however, it is certainly possible that imports from other countries would affect prices too. I am currently in the early stages of this project. Stay tuned!
