--- a/_posts/2018-02-20-reddit.markdown
+++ b/_posts/2018-02-20-reddit.markdown
@@ -5,8 +5,7 @@ date: 2018-02-20
 img: reddit.png
 alt: image-alt
 project-date: February 2018
-client: Start Bootstrap
-category: Web Development
+category: Data Science
 description: The goal of this project was to analyze drivers of user engagement on reddit.com
 
 ---
